--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,16 @@ body{
    left: 0;
    right: 0;
    bottom: 0;
-}
-h1{
-    ba
+  
+   }
+
+.container{
+    background-image: url(https://miro.medium.com/max/1024/1*fce5XyX2jYROR94Ow4WjdQ.jpeg);
+    background-size: cover;
+    margin-left:70%;
+    margin-top:10%;
+    padding: 13%;
+   
+ width: 1%;
+ height: 50%;
 }
