--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,15 @@ body{
  width: 1%;
  height: 50%;
 }
+
+.nav{
+    margin:0 auto;
+    padding: -20% 0;
+    margin-right: 0%;
+    background-color: rgba(0, 0, 0, 0.53);
+    z-index:3;
+} 
+
+nav >ul{
+    text-align: center;
+}
