--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     background-image:url(https://wallpaperaccess.com/full/983837.png);
-           background-repeat: no-repeat; 
+  background-repeat: no-repeat; 
    background-size: cover;
    width: 100%;
    height: 100%;
@@ -8,6 +8,7 @@ body{
    left: 0;
    right: 0;
    bottom: 0;
+   position: relative;
   
    }
 
@@ -22,21 +23,38 @@ body{
  height: 50%;
 }
 
-.nav{
+nav{
     margin:0 auto;
     padding: -20% 0;
-    margin-right: 0%;
+  width: 98%;
     background-color: rgba(0, 0, 0, 0.53);
     z-index:3;
+    margin-top: -37%;
+    margin-left: -0.6%;
+    background-size: cover;
 } 
 
 nav >ul{
     text-align: center;
+   
 }
-nav >ul >li{
+nav>ul>li{
     text-decoration: none;
-display: inline-block;
+    display: inline-block;
 }
 nav > ul >li >h4{
-    display:inline-block
+    display:inline-block;
+}
+nav > ul > li > h4>a{
+    padding:5px;
+    margin:0px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color:#F5F5F5;
+    
+}
+nav > ul > li>h4>a:hover{
+    box-shadow: 0 0 10px rgba(0,0,0.1), inset 0 0 1px rgba(255,255,255,0.6);
+    background-color: slategray;
+    columns: darkgreen;
 }
